Montando a página index e estruturando a mesma.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <meta name="Author" content="Helder Calazans" >
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>BackStreet Boys</title>
     </head>
     <body>
-        
+        <header>
+            <h1>BackStreet Boys - A maior boy band da história</h1>
+        </header>
+        <!-- Conteúdo principal do site -->
+        <main>
+            <div class="main-content">
+                <p>BackStreet Boys é uma banda americana formada por AJ McLean, Howie Dorough, Nick Carter, Kevin Richardson e Brian Litrell. 
+                    A banda foi formada em Orlando, Florida, em 1993 e ganhou destaque internacional desde  o lançamento do seu primeiro álbum, ‘BackStreet Boys’ em 1996.    
+                </p>
+                <p>
+                    Segundo a revista RollingStone, a banda é a maior boy band da história, ficando a frente dos Beatles.
+                </p>
+                <p>
+                    A banda está na ativa até hoje e tem 5 indicações ao Grammy, de 1999 até 2019.
+                </p>
+                <p>
+                    Os BackStreet Boys são a única boy band da história a alcançar o feito de ter seus primeiros 10 álbuns lançados, alcançando top 10 das paradas nos EUA.
+                </p>
+                <p>
+                    Graças a esses feitos e ao fato de já terem vendido, ao todo, mais de 130 milhões de álbuns em todo o mundo, em abril de 2013 a banda recebeu uma estrela na calçada da fama, em Hollywood.
+                </p>
+            </div>
+        </main>
+        <aside>
+            <img src="./assets/img/backstreet-boys.jpg" alt="Imagem dos integrantes da banda BackStreet Boys" title="Integrantes do BackStreet Boys">
+            <nav>
+                <ul>
+                    <li>Sobre a banda</li>
+                    <li>Discografia</li>
+                    <li>Instagram</li>
+                </ul>
+            </nav>
+        </aside>
+        <footer>
+            &copy Todos os direitos reservados
+        </footer>
     </body>
 </html>
