Adicionando estilo à página index

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>BackStreet Boys</title>
+        <title>BSB - A maior boy band da história</title>
+        <link rel="stylesheet" href="./assets/css/home.css">
+
+        
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Montserrat:700,400&display=swap">
     </head>
-    <body>
-        <header>
+    <body class="container">
+        <header class="clear">
             <h1>BackStreet Boys - A maior boy band da história</h1>
         </header>
         <!-- Conteúdo principal do site -->
         <main>
             <div class="main-content">
-                <p>BackStreet Boys é uma banda americana formada por AJ McLean, Howie Dorough, Nick Carter, Kevin Richardson e Brian Litrell. 
+                <p>BackStreet Boys é uma <strong>banda americana</strong> formada por AJ McLean, Howie Dorough, Nick Carter, Kevin Richardson e Brian Litrell. 
                     A banda foi formada em Orlando, Florida, em 1993 e ganhou destaque internacional desde  o lançamento do seu primeiro álbum, ‘BackStreet Boys’ em 1996.    
                 </p>
                 <p>
@@ -32,7 +36,7 @@
             </div>
         </main>
         <aside>
-            <img src="./assets/img/backstreet-boys.jpg" alt="Imagem dos integrantes da banda BackStreet Boys" title="Integrantes do BackStreet Boys">
+            <img class="imagem-logo" src="./assets/img/backstreet-boys.jpg" alt="Imagem dos integrantes da banda BackStreet Boys" title="Integrantes do BackStreet Boys">
             <nav>
                 <ul>
                     <li>Sobre a banda</li>
