--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Conteúdo principal do site -->
         <main>
             <div class="main-content">
-                <p>BackStreet Boys é uma <strong>banda americana</strong> formada por AJ McLean, Howie Dorough, Nick Carter, Kevin Richardson e Brian Litrell. 
+                <p>BackStreet Boys é uma banda americana formada por AJ McLean, Howie Dorough, Nick Carter, Kevin Richardson e Brian Litrell. 
                     A banda foi formada em Orlando, Florida, em 1993 e ganhou destaque internacional desde  o lançamento do seu primeiro álbum, ‘BackStreet Boys’ em 1996.    
                 </p>
                 <p>
@@ -35,13 +35,30 @@
                 </p>
             </div>
         </main>
-        <aside>
+        <aside class="navegacao"> 
             <img class="imagem-logo" src="./assets/img/backstreet-boys.jpg" alt="Imagem dos integrantes da banda BackStreet Boys" title="Integrantes do BackStreet Boys">
             <nav>
                 <ul>
                     <li>Sobre a banda</li>
                     <li>Discografia</li>
-                    <li>Instagram</li>
+                </ul>
+                <h2>Redes Sociais</h2>
+                <ul class="social">
+                    <li>
+                        <a class="facebook" href="https://www.facebook.com/backstreetboys/" target="_blank">
+                            Facebook
+                        </a>
+                    </li>
+                    <li>
+                        <a class="instagram" href="https://www.instagram.com/backstreetboys/?hl=pt-br" target="_blank">
+                            Instagram
+                        </a>
+                    </li>
+                    <li>
+                        <a class="youtube" href="https://www.youtube.com/user/bsbofficial" target="_blank">
+                            Youtube
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </aside>
