FInalizando ajustes da página principal

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
         <aside class="navegacao"> 
             <img class="imagem-logo" src="./assets/img/backstreet-boys.jpg" alt="Imagem dos integrantes da banda BackStreet Boys" title="Integrantes do BackStreet Boys">
             <nav>
-                <ul>
-                    <li>Sobre a banda</li>
-                    <li>Discografia</li>
+                <ul class="menu">
+                    <li><a href="index.html">Sobre a banda</a></li>
+                    <li><a href="discografia.html">Discografia</a></li>
                 </ul>
-                <h2>Redes Sociais</h2>
                 <ul class="social">
                     <li>
                         <a class="facebook" href="https://www.facebook.com/backstreetboys/" target="_blank">
