Criando a página de discografia e ajustando css da área principal

--- a/discografia.html
+++ b/discografia.html
@@ -5,17 +5,81 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>BSB - Discografia</title>
+        <title>BSB - A maior boy band da história</title>
         <link rel="stylesheet" href="./assets/css/home.css">
+        <link rel="stylesheet" href="./assets/css/disco.css">
 
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Montserrat:700,400&display=swap">
     </head>
-    <body>
-        <header>
-            <h1>Discografia da banda</h1>
+    <body class="container">
+        <header class="clear">
+            <h1>BackStreet Boys - A maior boy band da história</h1>
         </header>
+        <!-- Conteúdo principal do site -->
         <main>
+            <div class="main-content">
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-01.jpg">
+                    <h1>BackStreet Boys (1996)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-02.jpg">
+                    <h1>BackStreet's back (1997)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-03.jpg">
+                    <h1>Millennium (1999)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-04.jpg">
+                    <h1>Black & Blue (2000)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-05.jpg">
+                    <h1>Never Gone (2005)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-01.jpg">
+                    <h1>BackStreet Boys (1996)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-01.jpg">
+                    <h1>BackStreet Boys (1996)</h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-01.jpg">
+                    <h1>BackStreet Boys (1996)</h1>
+                </article>
         </main>
+        <aside class="navegacao"> 
+            <img class="imagem-logo" src="./assets/img/backstreet-boys.jpg" alt="Imagem dos integrantes da banda BackStreet Boys" title="Integrantes do BackStreet Boys">
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html">Sobre a banda</a></li>
+                    <li><a href="discografia.html">Discografia</a></li>
+                </ul>
+                <ul class="social">
+                    <li>
+                        <a class="facebook" href="https://www.facebook.com/backstreetboys/" target="_blank">
+                            Facebook
+                        </a>
+                    </li>
+                    <li>
+                        <a class="instagram" href="https://www.instagram.com/backstreetboys/?hl=pt-br" target="_blank">
+                            Instagram
+                        </a>
+                    </li>
+                    <li>
+                        <a class="youtube" href="https://www.youtube.com/user/bsbofficial" target="_blank">
+                            Youtube
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <footer>
+            &copy Todos os direitos reservados
+        </footer>
     </body>
 </html>
