Adicionando links para discografia e resolvendo a visualização da área principal do site, dando espaços entre ela e o header e o footer

--- a/discografia.html
+++ b/discografia.html
@@ -21,35 +21,39 @@
             <div class="main-content">
                 <article class="area-publicacao">
                     <img src="./assets/img/album-01.jpg">
-                    <h1>BackStreet Boys (1996)</h1>
+                    <h1><a href="https://open.spotify.com/album/1oWxRkI4V9d3hH3PqWpx9H" target="_blank">BackStreet Boys (1996)</a></h1>
                 </article>
                 <article class="area-publicacao">
                     <img src="./assets/img/album-02.jpg">
-                    <h1>BackStreet's back (1997)</h1>
+                    <h1><a href="https://open.spotify.com/album/2U9ONknz1iFEK9drEKLx8v" target="_blank">BackStreet's back (1997)</a></h1>
                 </article>
                 <article class="area-publicacao">
                     <img src="./assets/img/album-03.jpg">
-                    <h1>Millennium (1999)</h1>
+                    <h1><a href="https://open.spotify.com/album/5ySxm9hxBNss01WCL7GLyQ" target="_blank">Millennium (1999)</a></h1>
                 </article>
                 <article class="area-publicacao">
                     <img src="./assets/img/album-04.jpg">
-                    <h1>Black & Blue (2000)</h1>
+                    <h1><a href="https://open.spotify.com/album/41zXjyVr6dzmchWf8tv3UO" target="_blank">Black & Blue (2000)</a></h1>
                 </article>
                 <article class="area-publicacao">
                     <img src="./assets/img/album-05.jpg">
-                    <h1>Never Gone (2005)</h1>
+                    <h1><a href="https://open.spotify.com/album/1Wz9PANLXjaOskUv575hRV" target="_blank">Never Gone (2005)</a></h1>
                 </article>
                 <article class="area-publicacao">
-                    <img src="./assets/img/album-01.jpg">
-                    <h1>BackStreet Boys (1996)</h1>
+                    <img src="./assets/img/album-06.jpg">
+                    <h1><a href="https://open.spotify.com/album/3dJhkG64rXbA2PtBLBGFVd" target="_blank">Unbreakable (2007)</a></h1>
                 </article>
                 <article class="area-publicacao">
-                    <img src="./assets/img/album-01.jpg">
-                    <h1>BackStreet Boys (1996)</h1>
+                    <img src="./assets/img/album-07.jpg">
+                    <h1><a href="https://open.spotify.com/album/08wSk6XJ7365lO47E1278L" target="_blank">This is Us (2009)</a></h1>
                 </article>
                 <article class="area-publicacao">
-                    <img src="./assets/img/album-01.jpg">
-                    <h1>BackStreet Boys (1996)</h1>
+                    <img src="./assets/img/album-08.png">
+                    <h1><a href="https://open.spotify.com/album/5t5ds0Vjx3ZefXUsSqFagr" target="_blank">In a World Like Us (2013)</a></h1>
+                </article>
+                <article class="area-publicacao">
+                    <img src="./assets/img/album-09.png">
+                    <h1><a href="https://open.spotify.com/album/02FX4aLHDNacfV4bMnO9Kv" target="_blank">DNA (2019)</a></h1>
                 </article>
         </main>
         <aside class="navegacao"> 
@@ -78,7 +82,7 @@
                 </ul>
             </nav>
         </aside>
-        <footer>
+        <footer class="clear">
             &copy Todos os direitos reservados
         </footer>
     </body>
