--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Conteúdo principal do site -->
         <main>
             <div class="main-content">
-                <p>BackStreet Boys é uma banda americana formada por AJ McLean, Howie Dorough, Nick Carter, Kevin Richardson e Brian Litrell. 
+                <p>BackStreet Boys é uma banda americana formada por <i>AJ McLean</i>, <i>Howie Dorough</i>, <i>Nick Carter</i>, <i>Kevin Richardson</i> e <i>Brian Litrell</i>. 
                     A banda foi formada em Orlando, Florida, em 1993 e ganhou destaque internacional desde  o lançamento do seu primeiro álbum, ‘BackStreet Boys’ em 1996.    
                 </p>
                 <p>
